log

Thu 17 Aug 2023 08:20:24 PM UTC: 
 tests:  0|7
total_score: 0/70
4834430
Thu 17 Aug 2023 08:24:38 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
011be2e
Thu 17 Aug 2023 08:24:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:14:13: error: ‘arr’ undeclared here (not in a function)
   14 |   int mayor=arr[0];
      |             ^~~
exercises.c:15:3: error: expected identifier or ‘(’ before ‘for’
   15 |   for(int i=0; i<size ; i++)
      |   ^~~
exercises.c:15:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |   for(int i=0; i<size ; i++)
      |                 ^
exercises.c:15:26: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   15 |   for(int i=0; i<size ; i++)
      |                          ^~
exercises.c:22:3: error: expected identifier or ‘(’ before ‘return’
   22 |   return mayor;
      |   ^~~~~~
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | }
      | ^
Compilation failed
1203863
Thu 17 Aug 2023 08:26:44 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:14:13: error: ‘arr’ undeclared here (not in a function)
   14 |   int mayor=arr[0];
      |             ^~~
exercises.c:15:3: error: expected identifier or ‘(’ before ‘for’
   15 |   for(int i=0; i<size ; i++){
      |   ^~~
exercises.c:15:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |   for(int i=0; i<size ; i++){
      |                 ^
exercises.c:15:26: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   15 |   for(int i=0; i<size ; i++){
      |                          ^~
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 |   return mayor;
      |   ^~~~~~
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
Compilation failed
7133175
Thu 17 Aug 2023 08:30:03 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:1:
exercises.c:14:13: error: ‘arr’ undeclared here (not in a function)
   14 |   int mayor=arr[0];
      |             ^~~
exercises.c:15:3: error: expected identifier or ‘(’ before ‘for’
   15 |   for(int i=0; i < size ; i++){
      |   ^~~
exercises.c:15:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |   for(int i=0; i < size ; i++){
      |                  ^
exercises.c:15:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   15 |   for(int i=0; i < size ; i++){
      |                            ^~
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 |   return mayor;
      |   ^~~~~~
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:30:1: error: expected identifier or ‘(’ before ‘{’ token
   30 | {
      | ^
Compilation failed
0b4a836
Thu 17 Aug 2023 08:30:17 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c:14:13: error: ‘arr’ undeclared here (not in a function)
   14 |   int mayor=arr[0];
      |             ^~~
exercises.c:15:3: error: expected identifier or ‘(’ before ‘for’
   15 |   for(int i=0; i < size ; i++){
      |   ^~~
exercises.c:15:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |   for(int i=0; i < size ; i++){
      |                  ^
exercises.c:15:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   15 |   for(int i=0; i < size ; i++){
      |                            ^~
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 |   return mayor;
      |   ^~~~~~
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:31:3: error: expected identifier or ‘(’ before ‘for’
   31 |   for (int i = 0; i < size / 2; i++) {
      |   ^~~
exercises.c:31:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   31 |   for (int i = 0; i < size / 2; i++) {
      |                     ^
exercises.c:31:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   31 |   for (int i = 0; i < size / 2; i++) {
      |                                  ^~
exercises.c:38:1: error: expected identifier or ‘(’ before ‘}’ token
   38 | }
      | ^
Compilation failed
9aa1f4f
